
  o Minor features (controller):
    - Add a new config option __DisablePredictedCircuits designed for
      use by the controller, when we don't want Tor to build any circuits
      preemptively.
    - Let the controller specify HOP=%d as an argument to ATTACHSTREAM,
      so we can exit from the middle of the circuit.
    - Implement "getinfo status/circuit-established".

  o Minor features (other):
    - Correctly report Windows 95 OSR2 and Windows 98 SE.
    - More unit tests.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued
      since 0.1.2.  When we encounter a v0 control message, we now send back
      an error and close the connection.
    - Remove the old "dns worker" server DNS code: it hasn't been default
      since 0.1.2.2-alpha, and all the servers seem to be using the new
      eventdns code.

  o Minor bugfixes (portability):
    - Even though windows is equally happy with / and \ as path separators,
      try to use \ consistently on windows and / consistently on unix: it
      makes the log messages nicer.

  o Minor bugfixes (other):
    - Stop allowing hibernating servers to be "stable" or "fast".
    - Check return values from pthread_mutex functions.
    - Don't save non-general-purpose router descriptors to the disk cache,
      because we have no way of remembering what their purpose was when
      we restart.
    - Correctly enforce that elements of directory objects do not appear
      more often than they are allowed to appear.
    - Fix a bug in dirserv_remove_invalid() that would cause authorities to
      corrupt memory under some really unlikely scenarios.
    - Add even more asserts to hunt down bug 417.
    - When we are reporting the DirServer line we just parsed, we were
      logging the second stanza of the key fingerprint, not the first.
    - On Windows, we were preventing other processes from reading